# flask-socketio-tutorial

backend/: app.py  config.py  pyproject.toml
frontend/: chat1.html  chat2.html
