[tool.poetry]
name = "flask-socketio-tutorial"
version = "0.1.0"
description = ""
authors = ["Demos Petsas <demos@petsas.consulting>"]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.2.3"
python-dotenv = "^1.0.0"
flask-socketio = "^5.3.4"
simple-websocket = "^0.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
